LanguageClient: include the range length in document updates

The did change notification parameter has an arguable redundant range
length field, but it seems that there are language server out there
which rely on the presence of this field.

Change-Id: Id29132fb6586a2886b8ba6d9a13df52a64f31161
Fixes: QTCREATORBUG-22694
Reviewed-by: Eike Ziller <eike.ziller@qt.io>